--- a/tex/sections/introduction/intro.tex
+++ b/tex/sections/introduction/intro.tex
@@ -1,13 +1,14 @@
+\section{Introduction}
 Since the release of Bitcoin about a decade ago, the interest in cryptocurrencies has increased tremendously, while a number of other ``altcoins'' have been constructed in the meantime. Given that cryptocurrencies are starting to be considered a generally accepted means of payment and are used for everyday transactions, the issue of efficiently handling cryptocurrencies by light clients, such as smartphones, has become of great importance.
 
-In this work, we consider the problem of optimizing light clients, or ``SPV clients'' as described in the original Bitcoin paper\cite{Nakamoto}. As blockchains are ever growing, the main setback for efficient light client applications is the processing of data amount linear to the size of the blockchain, e.g. for synchronization purposes. 
+In this work, we consider the problem of optimizing light clients, or ``SPV clients'' as described in the original Bitcoin paper\cite{nakamoto}. As blockchains are ever growing, the main setback for efficient light client applications is the processing of data amount linear to the size of the blockchain, e.g. for synchronization purposes. 
 
-Our work is based on the construction of Non-Interactive Proofs of Proof of Work\cite{NIPoPoWs} that achieves SPV proofs of polylogarithmic portion of the blockchain size. The NIPoPoWs construction suggests a protocol update, that could be possibly implemented by a soft or a hard fork. Given the reluctancy of the  Bitcoin community to proceed to such forks, we consider the case of a velvet fork\cite{NIPoPoWs}\cite{Zamyatin}, where it suffices only a portion of the total players to be updated.
+Our work is based on the construction of Non-Interactive Proofs of Proof of Work\cite{nipopows} that achieves SPV proofs of polylogarithmic portion of the blockchain size. The NIPoPoWs construction suggests a protocol update, that could be possibly implemented by a soft or a hard fork. Given the reluctancy of the  Bitcoin community to proceed to such forks, we consider the case of a velvet fork\cite{nipopows}\cite{velvet}, where it suffices only a portion of the total players to be updated.
 
 Under this scope, our contributions come as follows:
 \begin{itemize}
-	\item We revise the security proof for NIPoPoWs suffix proof protocol and compute a concrete value for the security parameter $m$
-	\item We describe an attack, that we name \textit{Chainsewing Attack}, against NIPoPoWs suffix proof construction, which is used for the light client's synchronization
-	\item We suggest a patch to the NIPoPoWs protocol that eliminates the \textit{Chainsewing Attack} and prove its security
+	\item We revise the security proof for superblock NIPoPoWs suffix proof protocol and compute a concrete value for the security parameter $m$
+  	\item We illustrate that, contrary to claims of previous works, superlight clients designed to work in a soft fork cannot be readily plugged into a velvet fork and expected to work. We present a novel attack termed the \emph{chain-sewing} attack which thwarts the defenses of previous proposals and allows even a minority adversary to cause catastrophic failures.
+	\item We propose the first \emph{backwards-compatible superlight client}. We put forth an interlinking mechanism implementable through a velvet fork. We then construct a superblock NIPoPoW protocol on top of the velvet forked chain and show it allows to build superlight clients for various statements regarding the blockchain state via both ``suffix'' and ``infix'' proofs. 
+	\item We prove our construction secure in the synchronous static difficulty model against adversaries bounded to $1/4$ of the mining power of the honest upgraded nodes. As such, our protocol works even if a constant minority of miners adopts it.
 \end{itemize}
-
