--- a/tex/sections/nipopows_hard_fork/nipopows_hard_fork.tex
+++ b/tex/sections/nipopows_hard_fork/nipopows_hard_fork.tex
@@ -1,8 +1,9 @@
+\section{NIPoPoWs under Soft or Hard Fork}
+
 \subsection{Suffix Proofs}
 NIPoPoWs suffix proofs are used to prove predicates that pertain to the suffix of the blockchain. For example, this is the case of light client synchronization to the longest valid chain.
  [...]
  
-\subsubsection{Security of Suffix Proofs} \label{proof_under_hard_fork}
 \subimport{./}{security_proof_suffix.tex} 
  
 \subsection{Infix Proofs}
